--- a/css/styles.css
+++ b/css/styles.css
@@ -405,7 +405,9 @@
     cursor: pointer;
     transition: 0.3s;
 }
-
+.tab_box  .tab_btn i{
+    margin-right:7px;
+}
 .tab_box button:hover{
     color: #000;
 }
@@ -431,6 +433,41 @@
 .content.active {
     display: block;
 }
+#guardadas a{
+    text-decoration: none;
+}
+.tittle-1{
+    color: rgb(148,148,148);
+    margin-right: 490px;
+    font-size: 10px;
+}
+.tittle-2{
+    color: rgb(49, 138, 240);
+    font-size: 10px;
+    margin-left: 1080px;
+}
+.tittle-2 i{
+    margin-right: 7px;
+    font-size: 10px;
+}
+.contenedor-especial {
+    text-align: center; /* Centra todo el contenido */
+}
+
+.imagen-g1 {
+    width: 100%; /* Ajusta según sea necesario */
+    height: auto;
+    display: block; /* Evita que el enlace afecte al texto */
+    margin: 0 auto; /* Centra la imagen si tiene un ancho menor */
+}
+
+.tittle-3 {
+    margin-top: 10px; /* Espacio entre la imagen y el texto */
+    font-size: 20px;
+    color: black; /* Ajusta el color según prefieras */
+}
+
+
 footer{
     text-align: center;
     padding: 10px 0;
