--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,38 @@
     object-fit: cover;
     border: 1px solid rgba(0, 0, 0, 0.4);
 }
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        padding: 10px;
+    }
 
+    .sidebar {
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+    }
+
+    .sidebar ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .sidebar ul li {
+        flex: 1;
+        border-bottom: none;
+        border-right: 1px solid #34495e;
+    }
+
+    .sidebar ul li:last-child {
+        border-right: none;
+    }
+
+    .main-content {
+        padding: 10px;
+    }
+}
 /* Contenedor de historias destacadas */
 .section-1-3 {
     position: absolute;
@@ -291,7 +322,6 @@
     font-weight: 400;
     font-size: 16px;
     background: rgb(115, 115, 115);
-    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
@@ -439,11 +469,11 @@
 .tittle-1{
     color: rgb(148,148,148);
     margin-right: 490px;
-    font-size: 10px;
+    font-size: 11px;
 }
 .tittle-2{
     color: rgb(49, 138, 240);
-    font-size: 10px;
+    font-size: 11px;
     margin-left: 1080px;
 }
 .tittle-2 i{
@@ -451,22 +481,43 @@
     font-size: 10px;
 }
 .contenedor-especial {
-    text-align: center; /* Centra todo el contenido */
+    position: relative;
+    display: inline-block;
 }
 
 .imagen-g1 {
-    width: 100%; /* Ajusta según sea necesario */
+    width: 400px; /* Ajusta según sea necesario */
     height: auto;
-    display: block; /* Evita que el enlace afecte al texto */
-    margin: 0 auto; /* Centra la imagen si tiene un ancho menor */
+    display: block;
+    margin-top: 20px;
+    margin-right: 300px;
 }
-
 .tittle-3 {
-    margin-top: 10px; /* Espacio entre la imagen y el texto */
-    font-size: 20px;
-    color: black; /* Ajusta el color según prefieras */
+    position: absolute;
+    bottom: 10px; /* Espacio desde la parte inferior */
+    left: 190px;
+    transform: translateX(-50%);
+    color: white;
+    font-size: 15px;
+    background: rgba(0, 0, 0, 0.2); /* Fondo semitransparente */
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-align: center;
+    width: 50%;
 }
-
+#etiquetadas{
+    margin-left: 250px;
+}
+.tittle--1{
+    text-decoration: none;
+}
+.tittle--2{
+ font-size: 11px;
+}
+#icon{
+    font-size: 50px;
+    margin-top: 20px;
+}
 
 footer{
     text-align: center;
@@ -474,7 +525,7 @@ footer{
 }
 footer, .footer-tittle{
     text-decoration: none;
-    color:grey;
+    color:rgb(173, 173, 173);
     font-size:10.5px;
     margin-left: 15px;
 }
@@ -489,5 +540,5 @@ footer, .footer-tittle{
 }
 .enlaces-footer3 .footer-tittle1{
     margin-left: 220px;
-    color: rgb(148, 148, 148);
+    color: rgb(173, 173, 173);
 }
