--- a/css/styles.css
+++ b/css/styles.css
@@ -322,6 +322,7 @@
     font-weight: 400;
     font-size: 16px;
     background: rgb(115, 115, 115);
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
